Fix issue with homepage styles on mobile.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,6 +4,10 @@
   margin-bottom: 30px;
 }
 
+.no-margin {
+  margin: 0 !important;
+}
+
 .p-outer:first-of-type {
   background-color: var(--color-lighter-gray);
 }
